--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "astro": "astro",
     "build": "astro check && astro build",
     "dev": "astro dev",
-    "format": "prettier --write \"**/*.{?([cm])[jt]s?(x),json,md?(x),?(s)css,html,astro,gitignore,env}\"",
-    "format:test": "prettier --check \"**/*.{?([cm])[jt]s?(x),json,md?(x),?(s)css,html,astro,gitignore,env}\"",
+    "format": "prettier --write \"**/*.{?([cm])[jt]s?(x),json,md?(x),?(s)css,html,astro,env}\"",
+    "format:test": "prettier --check \"**/*.{?([cm])[jt]s?(x),json,md?(x),?(s)css,html,astro,env}\"",
     "lint": "concurrently 'npm:lint:*'",
     "lint:astro": "astro check",
     "lint:css": "stylelint \"src/styles/**/*.css\"",
