--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "start": "astro dev"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.4",
-    "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/tailwind": "^5.0.3",
-    "astro": "^4.0.3",
-    "tailwindcss": "^3.3.5"
+    "astro": "^4.0.3"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.4.1",
+    "@astrojs/sitemap": "^3.0.5",
+    "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
@@ -43,14 +42,14 @@
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-astro-organize-imports": "^0.3.3",
+    "prettier-plugin-astro-organize-imports": "^0.4.0",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-packagejson": "^2.4.7",
-    "prettier-plugin-sh": "^0.13.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "rehype-external-links": "^3.0.0",
     "stylelint": "^16.2.0",
     "stylelint-config-standard": "^36.0.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
