--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,10 @@
-# build output
-dist/
-# generated types
-.astro/
+# Build output
+public/
 
-# dependencies
-node_modules/
+# Generated files
+resources/_gen/
+assets/jsconfig.json
+hugo_stats.json
 
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
-.DS_Store
+# Build lock file
+.hugo_build.lock
