--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,6 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 # don't set the maximum line length as URLs, Tailwind classes, and some other strings may be longer
 max_line_length = off
+
+[Makefile]
+indent_size = 4
