build: add a formatting script to the `Makefile`

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       !startsWith(github.event.head_commit.message, 'docs')"
     strategy:
       matrix:
-        node: ['18', '20']
+        node: ["18", "20"]
 
     steps:
       - name: Check out the repository
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v4.0.0
         with:
           node-version: ${{ matrix.node }}
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -37,7 +37,7 @@ jobs:
       !startsWith(github.event.head_commit.message, 'docs')"
     strategy:
       matrix:
-        node: ['18', '20']
+        node: ["18", "20"]
 
     steps:
       - name: Check out the repository
@@ -47,7 +47,7 @@ jobs:
         uses: actions/setup-node@v4.0.0
         with:
           node-version: ${{ matrix.node }}
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
