--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm ci
 
       - name: Build the apps and packages
-        run: npm run build
+        run: make build
 
   check:
     name: Check
@@ -52,11 +52,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Generate the types
-        run: npm run astro sync
-
       - name: Lint the workspaces
-        run: npm run lint
-
-      - name: Check the formatting
-        run: npm run format:test
+        run: make lint
