--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       !startsWith(github.event.head_commit.message, 'docs')"
     strategy:
       matrix:
-        node: ["18", "20"]
+        node: ["20"]
 
     steps:
       - name: Check out the repository
@@ -37,7 +37,7 @@ jobs:
       !startsWith(github.event.head_commit.message, 'docs')"
     strategy:
       matrix:
-        node: ["18", "20"]
+        node: ["20"]
 
     steps:
       - name: Check out the repository
@@ -48,6 +48,20 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: "npm"
+
+      - name: Install Cargo dependencies
+        run: cargo install taplo --locked
+
+      - name: Cache the Cargo dependencies
+        uses: actions/cache@v4.0.0
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Install dependencies
         run: npm ci
