ci: fix the Taplo crate name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           cache: "npm"
 
       - name: Install Cargo dependencies
-        run: cargo install taplo --locked
+        run: cargo install taplo-cli --locked
 
       - name: Cache the Cargo dependencies
         uses: actions/cache@v4.0.0
