feat: add logo and copyright year to the footer

--- a/hugo.toml
+++ b/hugo.toml
@@ -5,6 +5,8 @@ disableHugoGeneratorInject = true
 title = "Antti Kivi"
 
 [params]
+  author = "Antti Kivi"
+  copyrightYear = 2024
   images = ["opengraph-image.png"]
   title = "Antti Kivi"
 
