--- a/hugo.toml
+++ b/hugo.toml
@@ -1,12 +1,11 @@
 baseURL = "https://www.anttikivi.fi"
+copyright = "&copy; 2024 Antti Kivi"
 defaultContentLanguage = "fi"
 defaultContentLanguageInSubdir = false
 disableHugoGeneratorInject = true
 title = "Antti Kivi"
 
 [params]
-  author = "Antti Kivi"
-  copyrightYear = 2024
   images = ["opengraph-image.png"]
   title = "Antti Kivi"
 [params.socialMedia]
