--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = "https://www.anttikivi.fi"
-copyright = "&copy; 2024 Antti Kivi"
+copyright = "© 2024 Antti Kivi"
 defaultContentLanguage = "fi"
 defaultContentLanguageInSubdir = false
 disableHugoGeneratorInject = true
