--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
       !startsWith(github.event.head_commit.message, 'docs')"
     strategy:
       matrix:
+        hugo: ["0.121.2", "0.122.0"]
         node: ["20"]
 
     steps:
@@ -18,10 +19,12 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Install Hugo
-        run: sudo apt install hugo
+        run: |
+          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${{ matrix.hugo }}/hugo_extended_${{ matrix.hugo }}_linux-amd64.deb \
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
 
       - name: Set up Node.js environment
-        uses: actions/setup-node@v4.0.0
+        uses: actions/setup-node@v4.0.2
         with:
           node-version: ${{ matrix.node }}
           cache: "npm"
@@ -40,6 +43,7 @@ jobs:
       !startsWith(github.event.head_commit.message, 'docs')"
     strategy:
       matrix:
+        hugo: ["0.121.2", "0.122.0"]
         node: ["20"]
 
     steps:
@@ -47,10 +51,12 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Install Hugo
-        run: sudo apt install hugo
+        run: |
+          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${{ matrix.hugo }}/hugo_extended_${{ matrix.hugo }}_linux-amd64.deb \
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
 
       - name: Set up Node.js environment
-        uses: actions/setup-node@v4.0.0
+        uses: actions/setup-node@v4.0.2
         with:
           node-version: ${{ matrix.node }}
           cache: "npm"
