--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://www.anttikivi.fi/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Antti Kivi'
