--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,80 @@
 baseURL = 'https://www.anttikivi.fi/'
-languageCode = 'en-us'
+copyright = "© 2024 Antti Kivi"
+defaultContentLanguage = "fi"
+defaultContentLanguageInSubdir = false
+disableHugoGeneratorInject = true
+disableKinds = ["RSS", "taxonomy"]
+enableMissingTranslationPlaceholders = true
+enableRobotsTXT = true
 title = 'Antti Kivi'
+
+[params]
+  images = ["opengraph-image.png"]
+  title = "Antti Kivi"
+[params.contact]
+  email = "antti@anttikivi.fi"
+[params.socialMedia]
+  instagramLink = "https://www.instagram.com/anttikiwi/"
+  threadsLink = "https://www.threads.net/@anttikiwi"
+
+[languages]
+
+[languages.en]
+  disabled = false
+  # languageCode = "en-US"
+  languageCode = "en"
+  languageName = "English"
+  weight = 2
+[languages.en.params]
+  description = "Communications adviser, entrepreneur and student"
+  subtitle = "Communications adviser"
+  switchTo = "In English"
+
+[languages.fi]
+  disabled = false
+  # languageCode = "fi-FI"
+  languageCode = "fi"
+  languageName = "suomi"
+  weight = 1
+[languages.fi.params]
+  description = "Viestintäasiantuntija, yrittäjä ja ylioppilas"
+  images = []
+  subtitle = "Viestintäasiantuntija"
+  switchTo = "Suomeksi"
+
+[module]
+[module.hugoVersion]
+  extended = true
+  min = "0.123.0"
+[[module.mounts]]
+  source = "assets"
+  target = "assets"
+[[module.mounts]]
+  source = "content"
+  target = "content"
+[[module.mounts]]
+  source = "layouts"
+  target = "layouts"
+[[module.mounts]]
+  source = "static"
+  target = "static"
+[[module.mounts]]
+  source = "hugo_stats.json"
+  target = "assets/watching/hugo_stats.json"
+
+[build]
+  noJSConfigInAssets = true
+[build.buildStats]
+  enable = true
+[[build.cachebusters]]
+  source = "assets/watching/hugo_stats\\.json"
+  target = "main\\.css"
+[[build.cachebusters]]
+  source = "(postcss|tailwind)\\.config\\.js"
+  target = "css"
+[[build.cachebusters]]
+  source = "assets/.*\\.(js|ts|jsx|tsx)"
+  target = "js"
+[[build.cachebusters]]
+  source = "assets/.*\\.(.*)$"
+  target = "$1"
