--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "Antti Kivi <antti@anttikivi.fi> (https://www.anttikivi.fi)",
   "type": "module",
   "scripts": {
-    "prettier": "prettier"
+    "prettier": "prettier",
+    "stylelint": "stylelint"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
@@ -27,6 +28,8 @@
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-packagejson": "^2.5.0",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard": "^36.0.1",
     "tailwindcss": "^3.4.4"
   }
 }
