--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
       !startsWith(github.event.head_commit.message, 'docs')"
     strategy:
       matrix:
-        hugo: ["0.121.2", "0.122.0"]
-        node: ["20"]
+        hugo: ["0.121.2", "0.128.0"]
+        node: ["18", "20"]
 
     steps:
       - name: Check out the repository
@@ -43,8 +43,8 @@ jobs:
       !startsWith(github.event.head_commit.message, 'docs')"
     strategy:
       matrix:
-        hugo: ["0.121.2", "0.122.0"]
-        node: ["20"]
+        hugo: ["0.121.2", "0.128.0"]
+        node: ["18", "20"]
 
     steps:
       - name: Check out the repository
