build(deps): add GSAP

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,9 @@ name: Main workflow
 
 on: [push, pull_request]
 
+env:
+  GSAP_NPM_TOKEN: ${{ secrets.GSAP_NPM_TOKEN }}
+
 jobs:
   build:
     name: Build
