--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "prettier": "prettier",
     "stylelint": "stylelint"
   },
+  "dependencies": {
+    "gsap": "npm:@gsap/shockingly@^3.12.5"
+  },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
