--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Antti Kivi <antti@anttikivi.fi> (https://www.anttikivi.fi)",
   "type": "module",
   "scripts": {
+    "eslint": "eslint",
     "prettier": "prettier",
     "stylelint": "stylelint"
   },
@@ -22,8 +23,11 @@
     "gsap": "npm:@gsap/shockingly@^3.12.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/eslint__js": "^8.42.3",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "prettier": "^3.3.2",
@@ -33,6 +37,8 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "stylelint": "^16.6.1",
     "stylelint-config-standard": "^36.0.1",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.14.1"
   }
 }
